# src/routes/index.ts
@@ -1,6 +1,8 @@
 import express from "express";
 import SampleController from "../controllers/sample";
 import UserController from "../controllers/userController";
+import registerController from "../controllers/registerController";
+import RegisterController from "../controllers/registerController";
 
 
 const router = express.Router();
@@ -23,6 +25,17 @@ router.get("/login", async (_req, res) => {
 
     return res.status(400).json({error: "Información invalida"})
 
+})
+
+router.post("/register", async (_req, res) =>{
+    const registerController = new RegisterController();
+    const response = await registerController.register(_req.body);
+
+    if (response){
+        return res.send(response);
+    }
+
+    return res.status(400).json({error: "No se pudo registrar"})
 })
 
 
